# ha-pv-economics

./: .gitignore  .readthedocs.yaml  INITIAL_SPEC.md  README.md  hacs.json  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  tests.yml  validate.yml
custom_components/pv_economics/: __init__.py  binary_sensor.py  calculations.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  repairs.py  sensor.py  statistics.py
custom_components/pv_economics/translations/: de.json  en.json
docs/: configuration.md  development.md  future-ideas.md  index.md  installation.md  sensors.md
tests/: __init__.py  conftest.py  test_calculations.py  test_config_flow.py  test_coordinator.py
